# Backend/docs/swagger.json
@@ -34,7 +34,7 @@
         },
         "/api/resume/list": {
             "get": {
-                "description": "获取简历列表",
+                "description": "获取历列表",
                 "tags": [
                     "resume"
                 ],
@@ -70,14 +70,7 @@
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/api/resume/{id}": {
@@ -106,7 +99,7 @@
                 }
             },
             "delete": {
-                "description": "删除简历",
+                "description": "除简历",
                 "tags": [
                     "resume"
                 ],
